[project]
name = "all-neural-network"
version = "0.1.0"
description = ""
authors = [
    {name = "klxcoder",email = "klxcoder@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "numpy (==1.26.4)",
    "matplotlib (==3.8.3)",
    "scikit-learn (==1.4.1.post1)",
    "pandas (==1.5.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
